--- a/report/Acknowledgement/acknowledgement.tex
+++ b/report/Acknowledgement/acknowledgement.tex
@@ -4,9 +4,17 @@
 %\begin{acknowledgementslong} %uncommenting this line, gives a different acknowledgements heading
 \begin{acknowledgements}      %this creates the heading for the acknowlegments
 
+I want to take this opportunity to acknowledge those who have supported me during this ambitious venture.
 
+Firstly to my supervisor, Dr. William Knottenbelt, for his boundless enthusiasm, optimistic outlook, constant positive reinforcement and light-hearted, hands-off approach that kept me motivated and fearless.
 
+Next, to all those who eagerly and freely participated in my evaluation tests; you made this effort worthwhile.
 
+To the researchers of Computational Linguistics who have done such important work and made their resources openly and easily available.
+
+I am grateful for my close friends, all of whom have inspired me in various walks of life. Each of you have a share in my successes and achievements.
+
+Most of all, I thank my family for their unconditional love and support. You continue to encourage me to follow my own path yet are always there for me when I meet a an obstacle or fork in the road. Such unity gives me peace of mind, the greatest gift I could ever receive.
 
 \end{acknowledgements}
 %\end{acknowledgmentslong}
