--- a/report/Appendix1/appendix1.tex
+++ b/report/Appendix1/appendix1.tex
@@ -388,7 +388,7 @@ Further rephrasing of lifted sentences, such as the last one, could be beneficia
 \section{Evaluation}
 
 \subsection{Edward Lear}
-\ref{sec:lear}
+\label{sec:lear}
 There was an old man with a beard\\
 Who said, "It's just as I feared!\\
 Two owls and a hen,\\
@@ -454,7 +454,7 @@ He replied, 'Yes, it does!'\\
 'It's a regular brute of a Bee!'\\
 
 \subsection{The Book of Limericks}
-\ref{sec:book}
+\label{sec:book}
 There was an old woman of Lynn,\\
 Whose nose very near reach'd her chin;\\
 You may easy suppose\\
