--- a/report/report.tex
+++ b/report/report.tex
@@ -112,15 +112,23 @@
 
 \frontmatter % book mode only
 \pagenumbering{roman}
+\newpage
+\thispagestyle{empty}
+\mbox{}
+\include{Abstract/abstract}
+\newpage
+\thispagestyle{empty}
+\mbox{}
+\include{Acknowledgement/acknowledgement}
 %\include{Dedication/dedication}
-%\include{Acknowledgement/acknowledgement}
-
+\newpage
+\thispagestyle{empty}
+\mbox{}
 \tableofcontents
 %\listoffigures
 %\addcontentsline{toc}{chapter}{nomenclature}
 
 \mainmatter % book mode only
-\include{Abstract/abstract}
 
 \parskip 6pt
 
