--- a/report/Conclusions/conclusions.tex
+++ b/report/Conclusions/conclusions.tex
@@ -15,6 +15,7 @@
 
 \section{Future Work}
 
+Derive inspiration relations from natural text e.g. wikipedia. Lookup Forth Bridge, extract as many relation as possible, allocate them to lines and go. Will stay in context and make sense + do quickly.
 
 
 Future:
