--- a/report/Implementation/implementation.tex
+++ b/report/Implementation/implementation.tex
@@ -1,4 +1,5 @@
 \chapter{Analysis Interpretation}
+\label{chp:interpretation}
 \ifpdf
     \graphicspath{{Implementation/ImplementationFigs/PNG/}{Implementation/ImplementationFigs/PDF/}{Implementation/ImplementationFigs/}}
 \else
