--- a/report/Management/management.tex
+++ b/report/Management/management.tex
@@ -1,4 +1,5 @@
 \chapter{Generation}
+\label{chp:generation}
 \ifpdf
     \graphicspath{{Management/ManagementFigs/PNG/}{Management/ManagementFigs/PDF/}{Management/ManagementFigs/}}
 \else
