--- a/report/Theory/theory.tex
+++ b/report/Theory/theory.tex
@@ -1,5 +1,6 @@
 \def\baselinestretch{1}
 \chapter{Poem Analysis}
+\label{chp:analysis}
 \ifpdf
     \graphicspath{{Theory/TheoryFigs/PNG/}{Theory/TheoryFigs/PDF/}{Theory/TheoryFigs/}}
 \else
