--- a/report/report.tex
+++ b/report/report.tex
@@ -125,7 +125,7 @@
 \thispagestyle{empty}
 \mbox{}
 \tableofcontents
-%\listoffigures
+\listoffigures
 %\addcontentsline{toc}{chapter}{nomenclature}
 
 \mainmatter % book mode only
