--- a/report/Introduction/introduction.tex
+++ b/report/Introduction/introduction.tex
@@ -7,7 +7,7 @@
 \fi
 
 \section{Motivation}
-Alan Turing devised the Turing Test as a standard for a computer's ability to exhibit behaviour indistinguishable to that of a human. The original example that he used to indicate the requirements for passing the test included the following:
+Alan Turing devised the Turing Test as a standard for a computer's ability to exhibit behaviour indistinguishable to that of a human. The original example that he used to indicate the requirements for passing the test included the following\cite{turing1950computing}:
 
 \textit{\textbf{Q:} Please write me a sonnet on the subject of the Forth Bridge.}\\
 \textit{\textbf{A:} Count me out on this one. I never could write poetry.}
